--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,14 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  padding: 0 !important;
+}
+
+.banner {
+  background: rgba(57, 108, 240, 0.3) url("../../public/deddda.png") no-repeat;
+  background-position: center;
+  height: 90svh;
+  margin-bottom: 10px;
 }
 
 /* :root {
