--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,10 +12,17 @@ body {
 }
 
 .banner {
-  background: rgba(57, 108, 240, 0.3) url("../../public/deddda.png") no-repeat;
+  background: rgba(78, 240, 57, 0.3) url("../../public/deddda.png") no-repeat;
   background-position: center;
   height: 90svh;
   margin-bottom: 10px;
+}
+
+button:hover {
+  background-color: "#23A455";
+}
+li:hover {
+  background-color: "#23A455";
 }
 
 /* :root {
@@ -113,3 +120,40 @@ a {
     color-scheme: dark;
   }
 } */
+
+.loader-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  display: flex; /* Hidden by default */
+}
+
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #34db3f; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.app-content {
+  padding: 20px;
+  /* Other styling for your app content */
+}
