--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,6 +114,15 @@ MuiInputBase-root:focus,
 div.footer-header::after {
   background: #4ba856 !important;
 }
+.no-image {
+  padding-left: 0 !important;
+}
+.icon {
+  display: block;
+  color: #4ba856;
+  font-size: 2rem;
+  margin-bottom: 0.75rem;
+}
 
 /* :root {
   --max-width: 1100px;
